# Autonomous-AI-orchestration-agent

./: .cursorrules  .dockerignore  .env.example  .env.mcp.example  .env.orchestration  .env.security  .gitignore  .lighthouserc.json  .lintstagedrc.js  100_PERCENT_COMPLETE.md  AAA_TIER_ROADMAP.md  ACTION_PLAN.md  ADDITIONAL_FEATURES.md  AGENTS.md  APK_ANALYSIS.md  APK_ANALYSIS_REPORT.md  APK_CAPABILITIES.md  APK_TOOLS_README.md  ARCHITECTURE.md  ARCHITECTURE_ORCHESTRATION.md  ARCHITECTURE_REVIEW_2026.md  AUTOMATION_SUMMARY.md  AUTONOMOUS_AGENT_OS.md  BROWSER_AI_CONFIGURATION.md  CHANGELOG.md  CHANGELOG_AUTH0.md  CLOUD_AGENT_SETUP_SUMMARY.md  CLOUD_SHELL_DEPLOYMENT.md  CODEOWNERS  COMPLETE_FEATURES.md  COMPLETE_SYSTEM_ASSESSMENT.md  COMPLETION_REPORT.md  COMPOSIO_SETUP_SUMMARY.md  CONNECTION_SETUP.md  CONTRIBUTING.md  COPY_PASTE_FOR_GEMINI.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.browser-automation  (+85 more)
.cursor/: COMPLETION_SUMMARY.md  COMPOSIO_MCP_SETUP.md  GETTING_STARTED.md  IMPROVEMENTS.md  QUICK_START.md  SETUP_STATUS.md  authenticate-composio.sh  mcp.json  verify-composio-setup.sh
.github/: AUTO_MERGE.md  BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v3.0.24.md  dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit
app/: _app.tsx  error.tsx  layout.tsx  loading.tsx  not-found.tsx
browser-configs/: README.md
browser-extension/: manifest.json
components/: advanced-dashboard.tsx  autonomous-agent-ui.tsx  chat-header.tsx  chat-optimized.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+237 files in other folders)
