[package]
name = "ai-agent"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["system-tray", "shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
